@@ -71,8 +71,11 @@ class ApiQueryImageInfo extends ApiQueryBase {
 
 						if ($fld_timestamp)
 							$vals['timestamp'] = wfTimestamp(TS_ISO_8601, $line->img_timestamp);
-						if ($fld_user)
+						if ($fld_user) {
 							$vals['user'] = $line->img_user_text;
+							if(!$line->img_user)
+								$vals['anon'] = '';
+						}
 						if ($fld_size) {
 							$vals['size'] = $line->img_size;
 							$vals['width'] = $line->img_width;
